@@ -1,5 +1,5 @@
 # This file gets tweaked in an os-specific fashion (see libegl1-mesa-dev.install.linux.in)
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libEGL.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/include/EGL usr/include
-dri/usr/include/KHR usr/include
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/egl.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/lib/${DEB_HOST_MULTIARCH}/libEGL.so
+usr/include/EGL
+usr/include/KHR
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/egl.pc
