@@ -1,9 +1,9 @@
 # OS-independent part (from libegl1-mesa-dev.install.in):
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libEGL.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/include/EGL usr/include
-dri/usr/include/KHR usr/include
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/egl.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/lib/${DEB_HOST_MULTIARCH}/libEGL.so
+usr/include/EGL
+usr/include/KHR
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/egl.pc
 
 # Wayland support, only on Linux:
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libwayland-egl.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/wayland-egl.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/lib/${DEB_HOST_MULTIARCH}/libwayland-egl.so
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/wayland-egl.pc
