@@ -1,3 +1,3 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libgbm.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/gbm.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
-dri/usr/include/gbm.h usr/include
+usr/lib/${DEB_HOST_MULTIARCH}/libgbm.so
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/gbm.pc
+usr/include/gbm.h
