@@ -1,1 +1,1 @@
-dri/etc/drirc etc
+etc/drirc
