@@ -1,3 +1,3 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libGLESv1_CM.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/include/GLES usr/include
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/glesv1_cm.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/lib/${DEB_HOST_MULTIARCH}/libGLESv1_CM.so
+usr/include/GLES
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/glesv1_cm.pc
