@@ -1,4 +1,4 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libGLESv2.so usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/include/GLES2 usr/include
-dri/usr/include/GLES3 usr/include
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/glesv2.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/lib/${DEB_HOST_MULTIARCH}/libGLESv2.so
+usr/include/GLES2
+usr/include/GLES3
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/glesv2.pc
