@@ -1,3 +1,3 @@
-dri/usr/include/GL/osmesa.h	usr/include/GL
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libOSMesa.so	usr/lib/${DEB_HOST_MULTIARCH}
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/osmesa.pc	usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig
+usr/include/GL/osmesa.h
+usr/lib/${DEB_HOST_MULTIARCH}/libOSMesa.so
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/osmesa.pc
