@@ -1,1 +1,1 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libOSMesa.so.*	usr/lib/${DEB_HOST_MULTIARCH}
+usr/lib/${DEB_HOST_MULTIARCH}/libOSMesa.so.*
