@@ -1,1 +1,1 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libxatracker.so.2* usr/lib/${DEB_HOST_MULTIARCH}
+usr/lib/${DEB_HOST_MULTIARCH}/libxatracker.so.2*
