@@ -1,9 +1,9 @@
-dri/usr/include/GL/gl.h usr/include/GL
-dri/usr/include/GL/glcorearb.h usr/include/GL
-dri/usr/include/GL/glext.h usr/include/GL
-dri/usr/include/GL/gl_mangle.h usr/include/GL
-dri/usr/include/GL/glx.h usr/include/GL
-dri/usr/include/GL/glxext.h usr/include/GL
-dri/usr/include/GL/glx_mangle.h usr/include/GL
-dri/usr/include/GL/internal/dri_interface.h usr/include/GL/internal
-dri/usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/dri.pc usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/
+usr/include/GL/gl.h
+usr/include/GL/glcorearb.h
+usr/include/GL/glext.h
+usr/include/GL/gl_mangle.h
+usr/include/GL/glx.h
+usr/include/GL/glxext.h
+usr/include/GL/glx_mangle.h
+usr/include/GL/internal/dri_interface.h
+usr/lib/${DEB_HOST_MULTIARCH}/pkgconfig/dri.pc
