@@ -36,12 +36,9 @@ endif
 # large, use an external file:
 include debian/not-installed
 
-# build the following configurations by default
-CONFIGS = dri
-
 STAMP_DIR = debian/stamp
 STAMP = $(STAMP_DIR)/$(DEB_BUILD_GNU_TYPE)
-BUILD_STAMPS = $(addprefix $(STAMP)-build-, $(CONFIGS))
+BUILD_STAMPS = $(STAMP)-build
 
 QUILT_STAMPFN = $(STAMP_DIR)/patch
 include /usr/share/quilt/quilt.make
@@ -118,7 +115,7 @@ confflags_EGL = --with-egl-platforms="$(EGL_DISPLAYS)"
 confflags_GLES = --enable-gles1 --enable-gles2
 confflags_GALLIUM += --with-gallium-drivers="$(GALLIUM_DRIVERS)"
 
-confflags-dri = \
+confflags = \
 	--enable-dri \
 	--with-dri-drivers="$(DRI_DRIVERS)" \
 	--with-dri-driverdir=/usr/lib/$(DEB_HOST_MULTIARCH)/dri \
@@ -156,13 +153,13 @@ build: build-stamp
 build-stamp: $(BUILD_STAMPS)
 	>$@
 
-$(STAMP)-build-%: configure
+$(STAMP)-build: configure
 	dh_testdir
 
 	mkdir -p $(DEB_BUILD_DIR)/$*
 
 	cd $(DEB_BUILD_DIR)/$* && \
-	../../configure --prefix=/usr --mandir=\$${prefix}/share/man \
+	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
 	             --infodir=\$${prefix}/share/info --sysconfdir=/etc \
 	             --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
 	             --localstatedir=/var --disable-silent-rules \
@@ -176,10 +173,7 @@ install: build
 	dh_testroot
 	dh_prep
 	dh_installdirs
-	set -e; for config in $(filter-out dri, $(CONFIGS)); do \
-		$(MAKE) -C $(DEB_BUILD_DIR)/$$config DESTDIR=$(CURDIR)/debian/tmp install; \
-	done
-	$(MAKE) -C $(DEB_BUILD_DIR)/dri DESTDIR=$(CURDIR)/debian/tmp/dri install
+	$(MAKE) -C $(DEB_BUILD_DIR) DESTDIR=$(CURDIR)/debian/tmp install
 	for file in debian/*.in; \
 	do \
 		sed -e"s,\$${DEB_HOST_MULTIARCH},$(DEB_HOST_MULTIARCH),g" \
@@ -233,13 +227,13 @@ binary-arch: install
 
 	# Copy the hardlinked *_dri.so correctly.
 	install -m755 -d debian/libgl1-mesa-dri/usr/lib/${DEB_HOST_MULTIARCH}/dri/
-	mv debian/tmp/dri/usr/lib/${DEB_HOST_MULTIARCH}/dri/*_dri.so \
+	mv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/dri/*_dri.so \
 	   debian/libgl1-mesa-dri/usr/lib/${DEB_HOST_MULTIARCH}/dri/
 
   ifneq ($(DEB_HOST_ARCH_OS), hurd)
 	# Copy the hardlinked vdpau drivers correctly.
 	install -m755 -d debian/mesa-vdpau-drivers/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/
-	mv debian/tmp/dri/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/libvdpau*.so* \
+	mv debian/tmp/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/libvdpau*.so* \
 	   debian/mesa-vdpau-drivers/usr/lib/${DEB_HOST_MULTIARCH}/vdpau/
   endif
 
